added basic UI for displaying data

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,29 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">8dp</dimen>
+    <dimen name="activity_vertical_margin">8dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- generic dimens -->
+    <dimen name="margin_small">5dp</dimen>
+    <dimen name="margin_small_double">10dp</dimen>
+    <dimen name="margin_medium">15dp</dimen>
+    <dimen name="margin_large">20dp</dimen>
+
+    <dimen name="text_size_small">12sp</dimen>
+    <dimen name="text_size_small_medium">14sp</dimen>
+    <dimen name="text_size_medium">16sp</dimen>
+    <dimen name="text_size_medium_large">18sp</dimen>
+    <dimen name="text_size_large">20sp</dimen>
+
+    <dimen name="image_size_small">100dp</dimen>
+    <dimen name="image_size_small_medium">200dp</dimen>
+    <dimen name="image_size_medium">300dp</dimen>
+    <dimen name="image_size_medium_large">400dp</dimen>
+    <dimen name="image_size_large">500dp</dimen>
+
+    <!-- specific dimens -->
+    <dimen name="comic_thumbnail_size">@dimen/image_size_small</dimen>
+    <dimen name="comic_thumbnail_margin">@dimen/margin_small</dimen>
+
 </resources>
