--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">8dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
 
     <!-- generic dimens -->
     <dimen name="margin_small">5dp</dimen>
@@ -23,7 +22,7 @@
     <dimen name="image_size_large">500dp</dimen>
 
     <!-- specific dimens -->
-    <dimen name="comic_thumbnail_size">@dimen/image_size_small</dimen>
-    <dimen name="comic_thumbnail_margin">@dimen/margin_small</dimen>
+    <dimen name="item_comic_thumbnail_size">@dimen/image_size_small</dimen>
+    <dimen name="comic_details_thumbnail_size">@dimen/image_size_small_medium</dimen>
 
 </resources>
