--- a/app/src/main/res/layout/fragment_comic_details.xml
+++ b/app/src/main/res/layout/fragment_comic_details.xml
@@ -8,12 +8,14 @@
     <RelativeLayout
         android:id="@+id/fragment_comics"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/margin_small_double">
 
         <ImageView
             android:id="@+id/thumbnail"
             android:layout_width="@dimen/comic_details_thumbnail_size"
-            android:layout_height="@dimen/comic_details_thumbnail_size"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:src="@drawable/comic_thumbnail_placeholder" />
 
         <LinearLayout
