--- a/app/src/main/res/layout/item_comic.xml
+++ b/app/src/main/res/layout/item_comic.xml
@@ -7,7 +7,8 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="@dimen/item_comic_thumbnail_size"
-        android:layout_height="@dimen/item_comic_thumbnail_size"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:src="@drawable/comic_thumbnail_placeholder" />
 
     <TextView
