--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,9 @@
     <dimen name="activity_vertical_margin">8dp</dimen>
 
     <!-- generic dimens -->
+    <dimen name="height_divider">2dp</dimen>
+
+    <dimen name="margin_very_small">3dp</dimen>
     <dimen name="margin_small">5dp</dimen>
     <dimen name="margin_small_double">10dp</dimen>
     <dimen name="margin_medium">15dp</dimen>
@@ -25,4 +28,9 @@
     <dimen name="item_comic_thumbnail_size">@dimen/image_size_small</dimen>
     <dimen name="comic_details_thumbnail_size">@dimen/image_size_small_medium</dimen>
 
+    <!-- header -->
+    <dimen name="header_divider_margin">@dimen/margin_very_small</dimen>
+    <dimen name="header_margin">@dimen/margin_very_small</dimen>
+    <dimen name="header_divider_height">@dimen/height_divider</dimen>
+    <dimen name="header_height">40dp</dimen>
 </resources>
