--- a/app/src/main/res/layout/item_comic.xml
+++ b/app/src/main/res/layout/item_comic.xml
@@ -4,20 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="@dimen/item_comic_thumbnail_size"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/comic_thumbnail_placeholder" />
+    <RelativeLayout
+        android:id="@+id/thumbnail_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="@dimen/item_comic_thumbnail_size"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/comic_thumbnail_placeholder" />
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@android:style/Widget.Holo.ProgressBar.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/image"
-        android:layout_toRightOf="@id/image"
+        android:layout_toEndOf="@id/thumbnail_container"
+        android:layout_toRightOf="@id/thumbnail_container"
         android:textSize="@dimen/text_size_large"
         tools:text="Title" />
 
